adding bootstraped ui

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,17 +1,3 @@
-<div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
+<p> <%= link_to post.title, post %></p>
 
-  <p>
-    <strong>Image:</strong>
-    <%= post.image %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= post.description %>
-  </p>
-
-</div>
+<%= image_tag(post.image.profile_size.url, width: '100%',alt: 'Image' ,class: 'img-responsive') if post.image.present?%> 
