--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,23 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Posts</h1>
-
-<div id="posts">
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
-  <% end %>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>Posts</h1>      
+    <p>Some text that represents "Me"...</p>
+  </div>
 </div>
+  
+<div class="container-fluid bg-3 text-center">    
+  <h3>Some of my Work</h3><br>
+  <div class="row">
 
-<%= link_to "New post", new_post_path %>
+  <% @posts.each do |post| %>
+    <div class="col-sm-3">
+     <%= render post %>
+    </div>
+  <% end %>
+
+</div><br><br>
+
+
+
